# Doppel

./: .gitignore  BACKLOG.md  CLAUDE.md  Makefile  README.md  SPEC.md  config.toml  pyproject.toml  settings.json
.claude/: launch.json
docs/: index.html
prompts/: adjudicate_v1.txt  brand_v1.txt
src/doppel/: __init__.py  app.py  config.py  db.py  drive.py  embed.py  jobs.py  logsetup.py  scan.py  vlm.py  webpconv.py
src/doppel/stages/: adjudicate.py  brand.py  exact.py  grouping.py  near.py  parallel.py  similar.py
src/doppel/templates/: _group_card.html  _review_batch.html  _review_pane.html  _scan_status.html  base.html  brand_photos.html  brands.html  dashboard.html  drive_browse.html  group_detail.html  groups.html  review.html  settings.html  setup.html  trash_confirm.html  trash_result.html  webp.html  workspace.html
tests/: conftest.py  fakes.py  images.py  test_adjudicate.py  test_app.py  test_boost.py  test_brand.py  test_drive_auth.py  test_exact.py  test_fetcher.py  test_final_review_fixes.py  test_jobs_runner.py  test_near.py  test_parallel.py  test_photo_links.py  test_pipeline_resume.py  test_resume.py  test_review.py  test_review_page.py  test_reviewed.py  test_setup_persistence.py  test_setup_wizard.py  test_similar.py  test_smoke.py  test_sort_folder.py  test_sync.py  test_trash.py  test_version.py  test_webpconv.py
