[project]
name = "doppel"
version = "0.1.0"
description = "Scan a Google Drive photo library and surface duplicates for human review"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doppel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
